<resources>
    <string name="app_name">Bayern Ticket Finder</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="trips">"Trips"</string>
    <string name="my_trips">"My Trips"</string>
    <string name="profile">"Profile"</string>
    <string name="new_trip">New trip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="choose_start_location">Choose starting location</string>
    <string name="destination">Destination</string>
    <string name="departure_time">Departure time</string>
    <string name="regress_time">Regress time</string>
    <string name="number_of_people">Number of people</string>
</resources>
